# ellipses

./: README.md  pyproject.toml
ellipses/: config.py  error.py  logging.py  main.py
tests/: test_ellipses.py
