[tool.poetry]
name = "ellipses"
version = "0.1.1"
description = "Stow-based dotfile manager"
authors = ["Enrico Borba <enricozb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
colorlog = "^4.7.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
ell = "ellipses.main:main"
